// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input icon label should match the output in 0 screen 1`] = `
<Text
  style={
    [
      {},
      [
        {},
        {},
      ],
    ]
  }
>
  DFI (UTXO)
</Text>
`;

exports[`input icon label should match the output in 1 screen 1`] = `
<Text
  style={
    [
      {},
      [
        {},
        {},
      ],
    ]
  }
>
  DFI (Token)
</Text>
`;
